Add probability distribution of the [Fe/H] abundance for all galaxies, highlighting Au6.

--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,6 +368,90 @@
     "        f\"../images/metal_abundance_distribution/three_panels_\"\n",
     "        f\"{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
     "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_distribution_for_sample_highlight(simulations: list,\n",
+    "    of: str, to: str, highlight: str, **kwargs) -> None:\n",
+    "\n",
+    "    fig = plt.figure(figsize=(7.4, 2.0))\n",
+    "    gs = fig.add_gridspec(nrows=1, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "    axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "    for ax in axs.flat:\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        if \"xlim\" in kwargs: ax.set_xlim(kwargs[\"xlim\"])\n",
+    "        if \"ylim\" in kwargs: ax.set_ylim(kwargs[\"ylim\"])\n",
+    "        if \"xticks\" in kwargs: ax.set_xticks(kwargs[\"xticks\"])\n",
+    "        if \"yticks\" in kwargs: ax.set_yticks(kwargs[\"yticks\"])\n",
+    "        ax.set_xlabel(f'[{of}/{to}]')\n",
+    "        ax.set_ylabel(\"PDF\")\n",
+    "        ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "        ax.label_outer()\n",
+    "    \n",
+    "    for i, component in enumerate(settings.components):\n",
+    "        ax = axs.flatten()[i]\n",
+    "        ax.text(\n",
+    "            x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "            s=r\"$\\textbf{\" + settings.component_labels[component] + \"}$\",\n",
+    "            c=settings.component_colors[component], transform=ax.transAxes)\n",
+    "\n",
+    "    for simulation in simulations:\n",
+    "        galaxy = parse(simulation)[0]\n",
+    "        df = read_data(simulation=simulation, of=of, to=to)\n",
+    "\n",
+    "        if simulation == highlight:\n",
+    "            zorder = 16\n",
+    "            label = f\"Au{galaxy}\"\n",
+    "        else:\n",
+    "            zorder = 15\n",
+    "            label = None\n",
+    "\n",
+    "        for j, component in enumerate(settings.components):\n",
+    "\n",
+    "            if simulation == highlight:\n",
+    "                color = settings.component_colors[settings.components[j]]\n",
+    "            else:\n",
+    "                color = \"silver\"\n",
+    "\n",
+    "            ax = axs.flatten()[j]\n",
+    "            is_region = (df[\"RegionTag\"] == j)\n",
+    "            is_finite = np.isfinite(df[f\"[{of}/{to}]\"])\n",
+    "\n",
+    "            pdf = gaussian_kde(df[f\"[{of}/{to}]\"][\n",
+    "                is_region & is_finite].to_numpy(\n",
+    "                    dtype=np.float64))\n",
+    "            pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
+    "            pdf_y = pdf(pdf_x)\n",
+    "            ax.plot(\n",
+    "                pdf_x, pdf_y, lw=1.0, zorder=zorder, color=color, label=label)\n",
+    "\n",
+    "            if simulation == highlight:\n",
+    "                ax.legend(loc=\"upper right\", framealpha=0, fontsize=7.0)\n",
+    "\n",
+    "        fig.savefig(\n",
+    "            f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
+    "            f\"included_fourpanels_{config['FILE_SUFFIX']}.pdf\")\n",
+    "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot all galaxies in four panels\n",
+    "sample = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]\n",
+    "plot_distribution_for_sample_highlight(\n",
+    "    simulations=sample, highlight=\"au6_or_l4_s127\", of=\"Fe\", to='H',\n",
+    "    xlim=(-3, 1.5), xticks=[-2, -1, 0, 1],\n",
+    "    ylim=(0, 2), yticks=[0, 0.5, 1.0, 1.5, 2])"
    ]
   },
   {
