Output data and update figures.

--- a/scripts/Stellar Formation Time.ipynb
+++ b/scripts/Stellar Formation Time.ipynb
@@ -4,24 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stellar Formation Time at $z=0$"
+    "# Distribution of Stellar Ages at $z=0$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.stats import binned_statistic"
+    "from scipy.stats import binned_statistic\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,32 +45,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
+    "CONFIG_FILE: str = \"02\"\n",
+    "N_BINS: int = 28\n",
+    "AGE_MIN: float = 0.0\n",
+    "AGE_MAX: float = 14.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_data(simulation: str) -> pd.DataFrame:\n",
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))\n",
+    "sample = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_data(simulation: str, config: dict) -> pd.DataFrame:\n",
     "    settings = Settings()\n",
     "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=DISC_STD_CIRC,\n",
-    "        disc_min_circ=DISC_MIN_CIRC,\n",
-    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
-    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY,\n",
+    "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
+    "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
+    "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
+    "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"],\n",
     "    )\n",
     "    s.tag_in_situ_stars()\n",
     "    s.add_stellar_age()\n",
@@ -86,83 +96,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for simulation in [\"au6_or_l4_s127\"]:\n",
-    "    df = read_data(simulation=simulation)\n",
-    "    label = f\"Au{parse(simulation)[0]}\"\n",
-    "\n",
-    "    fig = plt.figure(figsize=(7.4, 2.0))\n",
-    "    gs = fig.add_gridspec(nrows=1, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "    axs = gs.subplots(sharex=True, sharey=True)\n",
-    "\n",
-    "    for ax in axs.flat:\n",
-    "        ax.tick_params(which='both', direction=\"in\")\n",
-    "        ax.set_xlim(0, 14)\n",
-    "        ax.set_ylim(0, 0.2)\n",
-    "        ax.set_xticks([0, 2, 4, 6, 8, 10, 12])\n",
-    "        ax.set_xlabel('Stellar Age [Gyr]')\n",
-    "        ax.set_ylabel(r\"$f_\\star$\")\n",
-    "        ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
-    "        ax.label_outer()\n",
-    "\n",
-    "    for idx, component in enumerate(settings.components):\n",
-    "        n_stars_comp = (df[\"RegionTag\"] == idx).sum()\n",
-    "\n",
-    "        hist, bin_edges = np.histogram(\n",
-    "                a=df[\"StellarAge_Gyr\"][df[\"RegionTag\"] == idx],\n",
-    "                bins=28, range=(0, 14))\n",
-    "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
-    "        axs[idx].plot(\n",
-    "            bin_centers, hist / n_stars_comp, zorder=12,\n",
-    "            c=settings.component_colors[component], lw=1.5)\n",
-    "\n",
-    "        hist, _ = np.histogram(\n",
-    "                a=df[\"StellarAge_Gyr\"][\n",
-    "                    (df[\"RegionTag\"] == idx) & (df[\"IsInSitu\"] == 1)],\n",
-    "                bins=28, range=(0, 14))\n",
-    "        axs[idx].plot(\n",
-    "            bin_centers, hist / n_stars_comp, zorder=12,\n",
-    "            c='k', lw=0.75, ls=(0, (3, 1.5, 1, 1.5)), label=\"In-Situ Stars\")\n",
-    "\n",
-    "        hist, _ = np.histogram(\n",
-    "                a=df[\"StellarAge_Gyr\"][\n",
-    "                    (df[\"RegionTag\"] == idx) & (df[\"IsInSitu\"] == 0)],\n",
-    "                bins=28, range=(0, 14))\n",
-    "        axs[idx].plot(\n",
-    "            bin_centers, hist / n_stars_comp, zorder=12,\n",
-    "            c='k', lw=0.75, ls=(0, (5, 1.5)), label=\"Ex-Situ Stars\")\n",
-    "\n",
-    "        axs[idx].text(\n",
-    "            x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
-    "            s=r\"$\\textbf{\" \\\n",
-    "                + list(settings.component_labels.values())[idx] + \"}$\",\n",
-    "            c=list(settings.component_colors.values())[idx],\n",
-    "            transform=axs[idx].transAxes)\n",
-    "\n",
-    "    axs[3].legend(loc=\"lower left\", framealpha=0, fontsize=6,\n",
-    "                  bbox_to_anchor=(0.009, 0.65))\n",
-    "\n",
-    "    axs[0].text(\n",
-    "        x=0.95, y=0.95, size=8.0,\n",
-    "        s=r\"$\\texttt{\" + label + \"}$\",\n",
-    "        ha='right', va='top', transform=axs[0].transAxes)\n",
-    "\n",
-    "    fig.savefig(\n",
-    "        f\"../images/stellar_formation_time/{simulation}{SUFFIX}.pdf\")\n",
-    "    plt.close(fig)"
+    "## Create Data Frames"
    ]
   },
   {
@@ -171,57 +108,164 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(7, 8))\n",
-    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "for simulation in sample:\n",
+    "    data = {}\n",
+    "    df = read_data(simulation, config)\n",
+    "    n_stars = len(df)\n",
+    "\n",
+    "    counts, bin_edges = np.histogram(\n",
+    "        a=df[\"StellarAge_Gyr\"], bins=N_BINS,\n",
+    "        range=(AGE_MIN, AGE_MAX))\n",
+    "    bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
+    "    data[\"TimeBinCenters_Gyr\"] = bin_centers\n",
+    "    data[\"StellarAgeDist_All\"] = counts / n_stars\n",
+    "\n",
+    "    counts = np.histogram(\n",
+    "        a=df[\"StellarAge_Gyr\"][df[\"IsInSitu\"]], bins=N_BINS,\n",
+    "        range=(AGE_MIN, AGE_MAX))[0]\n",
+    "    data[\"StellarAgeDist_All_InSitu\"] = counts / n_stars\n",
+    "\n",
+    "    for i, c in enumerate(settings.components):\n",
+    "        is_comp = df[\"RegionTag\"] == i\n",
+    "        n_stars_comp = (is_comp).sum()\n",
+    "\n",
+    "        counts = np.histogram(\n",
+    "            a=df[\"StellarAge_Gyr\"][is_comp],\n",
+    "            bins=N_BINS, range=(AGE_MIN, AGE_MAX))[0]\n",
+    "        data[f\"StellarAgeDist_{c}\"] = counts / n_stars_comp\n",
+    "    \n",
+    "        counts = np.histogram(\n",
+    "            a=df[\"StellarAge_Gyr\"][is_comp & df[\"IsInSitu\"]],\n",
+    "            bins=N_BINS, range=(AGE_MIN, AGE_MAX))[0]\n",
+    "        data[f\"StellarAgeDist_{c}_InSitu\"] = counts / n_stars_comp\n",
+    "    \n",
+    "    df = pd.DataFrame(data)\n",
+    "    df.to_csv(f\"../results/{'_'.join(simulation.split('_')[:-1])}/\"\n",
+    "              \"stellar_formation_time_dist.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(7.4, 2.0))\n",
+    "gs = fig.add_gridspec(nrows=1, ncols=5, hspace=0.0, wspace=0.0)\n",
     "axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
     "for ax in axs.flatten():\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
-    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
-    "    \n",
     "    ax.set_xlim(0, 14)\n",
+    "    ax.set_ylim(0, 0.3)\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
-    "    \n",
-    "    ax.set_ylim(0, 0.3),\n",
-    "    ax.set_yticks([0, 0.05, 0.1, 0.15, 0.2, 0.25])\n",
+    "    ax.set_xlabel('Stellar Age [Gyr]')\n",
+    "    ax.set_ylabel(r\"$f_\\star$\")\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "    ax.label_outer()\n",
     "\n",
-    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
-    "        ax.set_xlabel(\"Stellar Age [Gyr]\")\n",
-    "        ax.tick_params(labelbottom=True)\n",
-    "    if ax.get_subplotspec().is_first_col():\n",
-    "        ax.set_ylabel(r\"$f_\\star$\")\n",
+    "for simulation in sample:\n",
+    "    galaxy = parse(simulation)[0]\n",
+    "    df = pd.read_csv(f\"../results/{'_'.join(simulation.split('_')[:-1])}/\"\n",
+    "                     \"stellar_formation_time_dist.csv\")\n",
+    "    label, zorder = None, 10\n",
+    "    if parse(simulation)[0] == 6:\n",
+    "        label, zorder = f\"Au{galaxy}\", 11\n",
     "\n",
-    "for i, simulation in enumerate(SAMPLE):\n",
-    "    ax = axs.flatten()[i]\n",
-    "    label = f\"Au{parse(simulation)[0]}\"\n",
-    "    df = read_data(simulation=simulation)\n",
-    "    \n",
-    "    for idx, component in enumerate(settings.components):\n",
-    "        n_stars_comp = (df[\"RegionTag\"] == idx).sum()\n",
+    "    # Plot all stars\n",
+    "    color = 'k' if galaxy == 6 else \"silver\"\n",
+    "    axs[0].plot(df[\"TimeBinCenters_Gyr\"], df[\"StellarAgeDist_All\"],\n",
+    "                zorder=zorder, c=color, lw=1.5, label=label)\n",
     "\n",
-    "        hist, bin_edges = np.histogram(\n",
-    "                a=df[\"StellarAge_Gyr\"][df[\"RegionTag\"] == idx],\n",
-    "                bins=28, range=(0, 14))\n",
-    "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
-    "        ax.plot(\n",
-    "            bin_centers, hist / n_stars_comp, zorder=12,\n",
-    "            c=settings.component_colors[component], lw=1,\n",
-    "            label=settings.component_labels[component])\n",
+    "    for i, c in enumerate(settings.components):\n",
+    "        color = settings.component_colors[c] if galaxy == 6 else \"silver\"\n",
     "\n",
-    "    ax.text(x=0.05, y=0.95, size=8.0,\n",
-    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
-    "            ha='left', va='top', transform=ax.transAxes)\n",
+    "        axs[i + 1].plot(df[\"TimeBinCenters_Gyr\"],\n",
+    "                        df[f\"StellarAgeDist_{c}\"],\n",
+    "                        zorder=zorder, c=color, lw=1.5, label=label)\n",
     "\n",
-    "    if ax == axs[0, 0]:\n",
-    "        ax.legend(loc=\"lower center\", framealpha=0.0, fontsize=7.0,\n",
-    "                  bbox_to_anchor=(3.5, -5.1), ncol=1)\n",
+    "axs[0].text(\n",
+    "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "    s=r\"$\\textbf{\" + \"All\" + \"}$\", c='k', transform=axs[0].transAxes)\n",
+    "for i, c in enumerate(settings.components):\n",
+    "    axs[i + 1].text(\n",
+    "        x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "        s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
+    "        c=settings.component_colors[c], transform=axs[i + 1].transAxes)\n",
     "\n",
-    "    ax.xaxis.label.set_size(8.0)\n",
-    "    ax.yaxis.label.set_size(8.0)\n",
+    "for ax in axs.flatten():\n",
+    "    ax.legend(loc=\"center left\", framealpha=0, fontsize=6,\n",
+    "              bbox_to_anchor=(0, 0.825))\n",
     "\n",
-    "    fig.savefig(f\"../images/stellar_formation_time/included{SUFFIX}.pdf\")\n",
+    "fig.savefig(\n",
+    "    f\"../images/stellar_formation_time/\"\n",
+    "    f\"au6_or_l4_s127{config['FILE_SUFFIX']}.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(7.4, 2.0))\n",
+    "gs = fig.add_gridspec(nrows=1, ncols=5, hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
+    "for ax in axs.flatten():\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_xlim(0, 14)\n",
+    "    ax.set_ylim(0, 0.3)\n",
+    "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "    ax.set_xlabel('Stellar Age [Gyr]')\n",
+    "    ax.set_ylabel(r\"$f_{\\star, \\mathrm{in-situ}}$\")\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "    ax.label_outer()\n",
+    "\n",
+    "for simulation in sample:\n",
+    "    galaxy = parse(simulation)[0]\n",
+    "    df = pd.read_csv(f\"../results/{'_'.join(simulation.split('_')[:-1])}/\"\n",
+    "                     \"stellar_formation_time_dist.csv\")\n",
+    "    label, zorder = None, 10\n",
+    "    if parse(simulation)[0] == 6:\n",
+    "        label, zorder = f\"Au{galaxy}\", 11\n",
+    "\n",
+    "    # Plot all stars\n",
+    "    color = 'k' if galaxy == 6 else \"silver\"\n",
+    "    axs[0].plot(df[\"TimeBinCenters_Gyr\"], df[\"StellarAgeDist_All_InSitu\"],\n",
+    "                zorder=zorder, c=color, lw=1.5, label=label)\n",
+    "\n",
+    "    for i, c in enumerate(settings.components):\n",
+    "        color = settings.component_colors[c] if galaxy == 6 else \"silver\"\n",
+    "\n",
+    "        axs[i + 1].plot(df[\"TimeBinCenters_Gyr\"],\n",
+    "                        df[f\"StellarAgeDist_{c}_InSitu\"],\n",
+    "                        zorder=zorder, c=color, lw=1.5, label=label)\n",
+    "\n",
+    "axs[0].text(\n",
+    "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "    s=r\"$\\textbf{\" + \"All\" + \"}$\", c='k', transform=axs[0].transAxes)\n",
+    "for i, c in enumerate(settings.components):\n",
+    "    axs[i + 1].text(\n",
+    "        x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "        s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
+    "        c=settings.component_colors[c], transform=axs[i + 1].transAxes)\n",
+    "\n",
+    "for ax in axs.flatten():\n",
+    "    ax.legend(loc=\"center left\", framealpha=0, fontsize=6,\n",
+    "              bbox_to_anchor=(0, 0.825))\n",
+    "\n",
+    "fig.savefig(\n",
+    "    f\"../images/stellar_formation_time/\"\n",
+    "    f\"au6_or_l4_s127_insitu{config['FILE_SUFFIX']}.pdf\")\n",
     "plt.close(fig)"
    ]
   }
