Add new figure.

--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,6 +541,119 @@
     "    sample, of=\"Mg\", to='H',\n",
     "    xlim=(-3, 1.5), ylim=(0, 2),\n",
     "    xticks=[-2, -1, 0, 1], yticks=[0, 0.5, 1.0, 1.5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2D Figure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_data_many(simulation: str, abundances: list, config: dict) -> tuple:\n",
+    "    settings = Settings()\n",
+    "\n",
+    "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
+    "    s.tag_particles_by_region(\n",
+    "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
+    "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
+    "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
+    "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
+    "    for of, to in abundances:\n",
+    "        s.add_metal_abundance(of, to)\n",
+    "    \n",
+    "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
+    "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
+    "\n",
+    "    data = {}\n",
+    "    for of, to in abundances:\n",
+    "        data[f\"[{of}/{to}]\"] = s.metal_abundance[\n",
+    "            f\"{of}/{to}\"][is_real_star & is_main_obj]\n",
+    "    data[\"RegionTag\"] = s.region_tag[is_real_star & is_main_obj]\n",
+    "\n",
+    "    df = pd.DataFrame(data)\n",
+    "    df[~np.isfinite(df)] = np.nan\n",
+    "    df.dropna(inplace=True)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abundances = [(\"Fe\", \"H\"), (\"O\", \"H\"), (\"O\", \"Fe\")]\n",
+    "xlims = [(-2, 1), (-2, 1.5), (0.1, 0.4)]\n",
+    "xticks =[(-2, -1.5, -1, -0.5, 0, 0.5, 1),\n",
+    "         (-2, -1.5, -1, -0.5, 0, 0.5, 1, 1.5),\n",
+    "         (0.1, 0.2, 0.3, 0.4)]\n",
+    "ylims = [(0, 2), (0, 2), (0, 20)]\n",
+    "yticks =[(0, 0.5, 1, 1.5),\n",
+    "         (0, 0.5, 1, 1.5),\n",
+    "         (0, 5, 10, 15)]\n",
+    "sample = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8.0, 6.0))\n",
+    "gs = fig.add_gridspec(nrows=4, ncols=3, hspace=0.0, wspace=0.25)\n",
+    "axs = gs.subplots(sharex=False, sharey=False)\n",
+    "\n",
+    "for i, c in enumerate(settings.components):\n",
+    "    for j in range(len(abundances)):\n",
+    "        ax = axs[i, j]\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        ax.set_ylim(ylims[j])\n",
+    "        ax.set_xlim(xlims[j])\n",
+    "        ax.set_xticks(xticks[j])\n",
+    "        if not ax.get_subplotspec().is_last_row():\n",
+    "            ax.set_xticklabels([])\n",
+    "        ax.set_yticks(yticks[j])\n",
+    "        ax.set_xlabel(f'[{abundances[j][0]}/{abundances[j][1]}]')\n",
+    "        if ax.get_subplotspec().is_first_col():\n",
+    "            ax.set_ylabel(\"PDF\")\n",
+    "        ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "        ax.text(\n",
+    "            x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "            s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
+    "            c=settings.component_colors[c], transform=ax.transAxes)\n",
+    "\n",
+    "for simulation in sample:\n",
+    "    galaxy = parse(simulation)[0]\n",
+    "    df = read_data_many(simulation, abundances, config)\n",
+    "    zorder = 16 if galaxy == 6 else 15\n",
+    "    label = f\"Au{galaxy}\" if galaxy == 6 else f\"_Au{galaxy}\"\n",
+    "    for j, (of, to) in enumerate(abundances):\n",
+    "        for i, c in enumerate(settings.components):\n",
+    "            color = settings.component_colors[c] if galaxy == 6 else \"silver\"\n",
+    "            ax = axs[i, j]\n",
+    "            is_region = df[\"RegionTag\"] == i\n",
+    "\n",
+    "            pdf = gaussian_kde(df[f\"[{of}/{to}]\"][is_region].to_numpy())\n",
+    "            pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
+    "            ax.plot(pdf_x, pdf(pdf_x), lw=1.0,\n",
+    "                    color=color, zorder=zorder, label=label)\n",
+    "\n",
+    "for ax in axs.flatten():\n",
+    "    ax.legend(loc=\"upper right\", framealpha=0, fontsize=7.0)\n",
+    "\n",
+    "fig.savefig(\n",
+    "    f\"../images/metal_abundance_distribution/\"\n",
+    "    f\"included_2dpanels{config['FILE_SUFFIX']}.pdf\")\n",
+    "plt.close(fig)"
    ]
   }
  ],
