--- a/scripts/Abundance O.ipynb
+++ b/scripts/Abundance O.ipynb
@@ -10,19 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
@@ -33,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
-    "from auriga.images import figure_setup, set_axs_configuration\n",
+    "from auriga.images import figure_setup\n",
     "from auriga.settings import Settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +105,11 @@
     "    settings = Settings()\n",
     "    props = {\"Simulation\": simulations}\n",
     "\n",
-    "    data = np.zeros((len(simulations), 8))\n",
+    "    data = np.zeros((len(simulations), 10))\n",
     "    for i, simulation in enumerate(simulations):\n",
     "        df = read_data(simulation)\n",
+    "        data[i, -2] = np.nanmedian(df[\"[O/Fe]\"])\n",
+    "        data[i, -1] = np.nanmedian(df[\"[Fe/H]\"])\n",
     "        for j in range(len(settings.components)):\n",
     "            data[i, j] = np.nanmedian(\n",
     "                df[\"[O/Fe]\"][df[\"ComponentTag\"] == j])\n",
@@ -127,17 +119,24 @@
     "    for j in range(len(settings.components)):\n",
     "        props[f\"[O/Fe]_{settings.components[j]}\"] = data[:, j]\n",
     "        props[f\"[Fe/H]_{settings.components[j]}\"] = data[:, j + 4]\n",
+    "    props[\"[O/Fe]_All\"] = data[:, -2]\n",
+    "    props[\"[Fe/H]_All\"] = data[:, -1]\n",
     "    \n",
     "    return pd.DataFrame(props)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = get_sample_data(SAMPLE)"
+    "file_path = \"../results/sample_median_OFe_FeH_abundances_by_component.csv\"\n",
+    "try:\n",
+    "    stats = pd.read_csv(file_path)\n",
+    "except FileNotFoundError:\n",
+    "    stats = get_sample_data(SAMPLE)\n",
+    "    stats.to_csv(file_path)"
    ]
   },
   {
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(\n",
-    "    figsize=(7.4, 2.0), nrows=1, ncols=4, sharey=True, sharex=True,\n",
+    "    figsize=(8.0, 2.0), nrows=1, ncols=5, sharey=True, sharex=True,\n",
     "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
     "\n",
     "for ax in axs.flatten():\n",
@@ -173,14 +172,39 @@
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    ax.set_xlim(-1.0, 0.8)\n",
     "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
-    "    ax.set_ylabel('median([O/Fe])')\n",
+    "    ax.set_ylabel('[O/Fe]')\n",
     "    ax.set_ylim(0.18, 0.32)\n",
     "    ax.set_yticks([0.20, 0.22, 0.24, 0.26, 0.28, 0.3])\n",
-    "    ax.set_xlabel('median([Fe/H])')\n",
+    "    ax.set_xlabel('[Fe/H]')\n",
     "    ax.set_axisbelow(True)\n",
     "    ax.label_outer()\n",
     "\n",
-    "for i, ax in enumerate(axs.flatten()):\n",
+    "axs[0].scatter(\n",
+    "    stats[\"[Fe/H]_All\"], stats[\"[O/Fe]_All\"],\n",
+    "    c='k', zorder=10, s=20, linewidths=0.4, edgecolors=\"white\", marker='o')\n",
+    "for c in settings.components:\n",
+    "    axs[0].scatter(\n",
+    "        stats[f\"[Fe/H]_{c}\"], stats[f\"[O/Fe]_{c}\"],\n",
+    "        c=\"silver\", zorder=5,\n",
+    "        s=20, linewidths=0.4, edgecolors=\"white\",\n",
+    "        marker=settings.component_markers[c])\n",
+    "fe_pdf = gaussian_kde(stats[f\"[Fe/H]_All\"].to_numpy(dtype=np.float64))\n",
+    "pdf_x = np.linspace(-1.0, 0.6, 100)\n",
+    "pdf_y = fe_pdf(pdf_x) / np.max(fe_pdf(pdf_x)) * 0.02 + ax.get_ylim()[0]\n",
+    "axs[0].fill_between(\n",
+    "    x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=\"black\", facecolor=\"#00000030\")\n",
+    "o_pdf = gaussian_kde(stats[f\"[O/Fe]_All\"].to_numpy(dtype=np.float64))\n",
+    "pdf_y = np.linspace(0.18, 0.32, 100)\n",
+    "pdf_x = o_pdf(pdf_y) / np.max(o_pdf(pdf_y)) * 0.3\n",
+    "axs[0].fill_betweenx(\n",
+    "    y=pdf_y, x1=-pdf_x + 0.8, x2=0.8, edgecolor=\"black\", facecolor=\"#00000030\")\n",
+    "\n",
+    "for i in range(4):\n",
+    "    ax = axs.flatten()[i + 1]\n",
+    "    ax.scatter(\n",
+    "        stats[\"[Fe/H]_All\"], stats[\"[O/Fe]_All\"],\n",
+    "        c=\"silver\", zorder=5, s=20, linewidths=0.4,\n",
+    "        edgecolors=\"white\", marker='o')\n",
     "    for j in range(len(settings.components)):\n",
     "        label = labels[j] if j == i else None\n",
     "        color = colors[j] if j == i else \"silver\"\n",
@@ -205,13 +229,20 @@
     "            o_pdf = gaussian_kde(\n",
     "                stats[f\"[O/Fe]_{settings.components[j]}\"].to_numpy(\n",
     "                    dtype=np.float64))\n",
-    "            pdf_y = np.linspace(0.18, 0.3, 100)\n",
+    "            pdf_y = np.linspace(0.18, 0.32, 100)\n",
     "            pdf_x = o_pdf(pdf_y) / np.max(o_pdf(pdf_y)) * 0.3\n",
     "            ax.fill_betweenx(\n",
     "                y=pdf_y, x1=-pdf_x + 0.8, x2=0.8, edgecolor=color,\n",
     "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
     "\n",
-    "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=7.5)\n",
+    "axs[0].text(\n",
+    "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\", s=r\"$\\textbf{All}$\",\n",
+    "    c=\"black\", transform=axs[0].transAxes)\n",
+    "for i, c in enumerate(settings.components):\n",
+    "    axs[i + 1].text(\n",
+    "        x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "        s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
+    "        c=settings.component_colors[c], transform=axs[i + 1].transAxes)\n",
     "\n",
     "fig.savefig(f\"../images/metallicity/OFe_vs_FeH_included_s127{SUFFIX}.pdf\")\n",
     "plt.close(fig)"
