--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_data(simulation: str) -> pd.DataFrame:\n",
+    "def read_data(simulation: str, tag_in_situ: bool = False) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    This method returns data related to the analysis in this notebook.\n",
     "\n",
@@ -100,13 +100,11 @@
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_stellar_age()\n",
     "    s.add_metal_abundance(of=\"Fe\", to='H')\n",
-    "    s.add_circularity()\n",
     "    s.tag_particles_by_region(\n",
     "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
     "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
     "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
     "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
-    "    s.tag_in_situ_stars()\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
@@ -115,7 +113,11 @@
     "        \"StellarAge_Gyr\": s.stellar_age[is_real_star & is_main_obj],\n",
     "        \"[Fe/H]\": s.metal_abundance[\"Fe/H\"][is_real_star & is_main_obj],\n",
     "        \"ComponentTag\": s.region_tag[is_real_star & is_main_obj],\n",
-    "        \"IsInSitu\": s.is_in_situ[is_real_star & is_main_obj]}\n",
+    "        }\n",
+    "    \n",
+    "    if tag_in_situ:\n",
+    "        s.tag_in_situ_stars()\n",
+    "        props[\"IsInSitu\"] = s.is_in_situ[is_real_star & is_main_obj]\n",
     "\n",
     "    df = pd.DataFrame(props)\n",
     "    df[~np.isfinite(df)] = np.nan\n",
@@ -473,36 +475,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/23 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [43:36<00:00, 136.78s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "components = []\n",
     "median_abundances = []\n",
     "median_ages = []\n",
     "\n",
-    "for simulation in tqdm([f\"au{i}_or_l4_s127\" for i in SAMPLE]):\n",
+    "for simulation in [f\"au{i}_or_l4_s127\" for i in SAMPLE]:\n",
     "    df = read_data(simulation=simulation)\n",
     "    for i in range(len(settings.components)):\n",
     "        is_region = (df[\"ComponentTag\"] == i)\n",
     "        components.append(i)\n",
     "        median_abundances.append(np.nanmedian(df[\"[Fe/H]\"][is_region]))\n",
     "        median_ages.append(np.nanmedian(df[\"StellarAge_Gyr\"][is_region]))\n",
+    "    components.append(-1)\n",
+    "    median_abundances.append(np.nanmedian(df[\"[Fe/H]\"]))\n",
+    "    median_ages.append(np.nanmedian(df[\"StellarAge_Gyr\"]))\n",
     "\n",
     "components = np.array(components)\n",
     "median_abundances = np.array(median_abundances)\n",
@@ -511,7 +501,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {}\n",
+    "\n",
+    "data[\"Simulation\"] = [f\"au{i}_or_l4_s127\" for i in SAMPLE]\n",
+    "data[\"MedianAges_Gyr_All\"] = median_ages[components == -1]\n",
+    "data[\"MedianAbundance_FeH_All\"] = median_abundances[components == -1]\n",
+    "for c in settings.components:\n",
+    "    tag = settings.component_tags[c]\n",
+    "    data[f\"MedianAges_Gyr_{c}\"] = median_ages[components == tag]\n",
+    "    data[f\"MedianAbundance_FeH_{c}\"] = median_abundances[components == tag]\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df.to_csv(f\"../results/age_metallicity_medians{config['FILE_SUFFIX']}.csv\",\n",
+    "          index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +531,7 @@
     "labels = list(settings.component_labels.values())\n",
     "\n",
     "fig, axs = plt.subplots(\n",
-    "    figsize=(7.4, 2.0), nrows=1, ncols=4, sharey=True, sharex=True,\n",
+    "    figsize=(8.0, 2.0), nrows=1, ncols=5, sharey=True, sharex=True,\n",
     "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
     "\n",
     "for ax in axs.flat:\n",
@@ -529,44 +540,75 @@
     "\n",
     "    ax.set_xlim(0, 14)\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
-    "    ax.set_xlabel(\"median(Age) [Gyr]\")\n",
+    "    ax.set_xlabel(\"Stellar Age [Gyr]\")\n",
     "\n",
     "    ax.set_ylim(-1.0, 0.7)\n",
-    "    ax.set_ylabel('median([Fe/H])')\n",
+    "    ax.set_ylabel('[Fe/H]')\n",
     "    ax.set_axisbelow(True)\n",
     "\n",
     "    ax.label_outer()\n",
     "\n",
-    "for i, ax in enumerate(axs.flatten()):\n",
-    "    for j in range(4):\n",
+    "# region All Stars\n",
+    "axs[0].scatter(\n",
+    "    df[\"MedianAges_Gyr_All\"], df[\"MedianAbundance_FeH_All\"],\n",
+    "    c='k', zorder=10, s=20, linewidths=0.4, edgecolors=\"white\", marker='o')\n",
+    "for c in settings.components:\n",
+    "    axs[0].scatter(\n",
+    "        df[f\"MedianAges_Gyr_{c}\"], df[f\"MedianAbundance_FeH_{c}\"],\n",
+    "        c=\"silver\", zorder=5,\n",
+    "        s=20, linewidths=0.4, edgecolors=\"white\",\n",
+    "        marker=settings.component_markers[c])\n",
+    "age_pdf = gaussian_kde(df[\"MedianAges_Gyr_All\"])\n",
+    "pdf_x = np.linspace(0, 14, 100)\n",
+    "pdf_y = age_pdf(pdf_x) / np.max(age_pdf(pdf_x)) * 0.2 - 1.0\n",
+    "axs[0].fill_between(\n",
+    "    x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=\"black\", facecolor=\"#00000030\")\n",
+    "abundance_pdf = gaussian_kde(df[\"MedianAbundance_FeH_All\"])\n",
+    "pdf_y = np.linspace(-1.0, 0.7, 100)\n",
+    "pdf_x = abundance_pdf(pdf_y) / np.max(abundance_pdf(pdf_y)) * 2\n",
+    "axs[0].fill_betweenx(\n",
+    "    y=pdf_y, x1=-pdf_x + 14, x2=14, edgecolor=\"black\", facecolor=\"#00000030\")\n",
+    "# endregion\n",
+    "\n",
+    "for i in range(len(settings.components)):\n",
+    "    ax = axs.flatten()[i + 1]\n",
+    "    for j, c in enumerate(settings.components):\n",
     "        label = labels[j] if j == i else None\n",
     "        color = colors[j] if j == i else \"silver\"\n",
     "        zorder = 10 if j == i else 5\n",
     "        ax.scatter(\n",
-    "            median_ages[components == j],\n",
-    "            median_abundances[components == j],\n",
+    "            df[f\"MedianAges_Gyr_{c}\"],\n",
+    "            df[f\"MedianAbundance_FeH_{c}\"],\n",
     "            c=color, label=label, zorder=zorder,\n",
     "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
     "\n",
     "        if j == i:\n",
-    "            age_pdf = gaussian_kde(median_ages[components == j])\n",
+    "            age_pdf = gaussian_kde(df[f\"MedianAges_Gyr_{c}\"])\n",
     "            pdf_x = np.linspace(0, 14, 100)\n",
     "            pdf_y = age_pdf(pdf_x) / np.max(age_pdf(pdf_x)) * 0.2 - 1.0\n",
     "            ax.fill_between(\n",
     "                x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=color,\n",
     "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
     "            \n",
-    "            abundance_pdf = gaussian_kde(median_abundances[components == j])\n",
+    "            abundance_pdf = gaussian_kde(df[f\"MedianAbundance_FeH_{c}\"])\n",
     "            pdf_y = np.linspace(-1.0, 0.7, 100)\n",
     "            pdf_x = abundance_pdf(pdf_y) / np.max(abundance_pdf(pdf_y)) * 2\n",
     "            ax.fill_betweenx(\n",
     "                y=pdf_y, x1=-pdf_x + 14, x2=14, edgecolor=color,\n",
     "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
     "\n",
-    "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=7.5)\n",
+    "axs[0].text(\n",
+    "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\", s=r\"$\\textbf{All}$\",\n",
+    "    c=\"black\", transform=axs[0].transAxes)\n",
+    "for i, c in enumerate(settings.components):\n",
+    "    axs[i + 1].text(\n",
+    "        x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "        s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
+    "        c=settings.component_colors[c], transform=axs[i + 1].transAxes)\n",
     "\n",
     "fig.savefig(\n",
-    "    f\"../images/age_metallicity_by_region/included_scatter{SUFFIX}.pdf\")\n",
+    "    f\"../images/age_metallicity_by_region/\"\n",
+    "    f\"included_scatter{config['FILE_SUFFIX']}.pdf\")\n",
     "plt.close(fig)"
    ]
   },
