--- a/scripts/Stellar Formation Time.ipynb
+++ b/scripts/Stellar Formation Time.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,14 +182,36 @@
     "    # Plot all stars\n",
     "    color = 'k' if galaxy == 6 else \"silver\"\n",
     "    axs[0].plot(df[\"TimeBinCenters_Gyr\"], df[\"StellarAgeDist_All\"],\n",
-    "                zorder=zorder, c=color, lw=1.5, label=label)\n",
+    "                zorder=zorder, c=color, lw=1, label=label)\n",
     "\n",
     "    for i, c in enumerate(settings.components):\n",
     "        color = settings.component_colors[c] if galaxy == 6 else \"silver\"\n",
     "\n",
     "        axs[i + 1].plot(df[\"TimeBinCenters_Gyr\"],\n",
     "                        df[f\"StellarAgeDist_{c}\"],\n",
-    "                        zorder=zorder, c=color, lw=1.5, label=label)\n",
+    "                        zorder=zorder, c=color, lw=1, label=label)\n",
+    "\n",
+    "# region Medians\n",
+    "data = np.zeros((len(sample), N_BINS))\n",
+    "for i, simulation in enumerate(sample):\n",
+    "    df = pd.read_csv(f\"../results/{'_'.join(simulation.split('_')[:-1])}/\"\n",
+    "                     \"stellar_formation_time_dist.csv\")\n",
+    "    data[i, :] = df[\"StellarAgeDist_All\"]\n",
+    "median = np.median(data, axis=0)\n",
+    "axs[0].plot(df[\"TimeBinCenters_Gyr\"], median, ls=(0, (5, 2)),\n",
+    "            zorder=zorder, c=\"black\", lw=1, label=\"Median\")\n",
+    "\n",
+    "for j, c in enumerate(settings.components):\n",
+    "    data = np.zeros((len(sample), N_BINS))\n",
+    "    for i, simulation in enumerate(sample):\n",
+    "        df = pd.read_csv(f\"../results/{'_'.join(simulation.split('_')[:-1])}/\"\n",
+    "                         \"stellar_formation_time_dist.csv\")\n",
+    "        data[i, :] = df[f\"StellarAgeDist_{c}\"]\n",
+    "    median = np.median(data, axis=0)\n",
+    "    axs[j + 1].plot(df[\"TimeBinCenters_Gyr\"], median, ls=(0, (5, 2)),\n",
+    "                    zorder=zorder, c=settings.component_colors[c],\n",
+    "                    lw=1, label=\"Median\")\n",
+    "# endregion\n",
     "\n",
     "axs[0].text(\n",
     "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
@@ -212,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,14 +263,36 @@
     "    # Plot all stars\n",
     "    color = 'k' if galaxy == 6 else \"silver\"\n",
     "    axs[0].plot(df[\"TimeBinCenters_Gyr\"], df[\"StellarAgeDist_All_InSitu\"],\n",
-    "                zorder=zorder, c=color, lw=1.5, label=label)\n",
+    "                zorder=zorder, c=color, lw=1, label=label)\n",
     "\n",
     "    for i, c in enumerate(settings.components):\n",
     "        color = settings.component_colors[c] if galaxy == 6 else \"silver\"\n",
     "\n",
     "        axs[i + 1].plot(df[\"TimeBinCenters_Gyr\"],\n",
     "                        df[f\"StellarAgeDist_{c}_InSitu\"],\n",
-    "                        zorder=zorder, c=color, lw=1.5, label=label)\n",
+    "                        zorder=zorder, c=color, lw=1, label=label)\n",
+    "\n",
+    "# region Medians\n",
+    "data = np.zeros((len(sample), N_BINS))\n",
+    "for i, simulation in enumerate(sample):\n",
+    "    df = pd.read_csv(f\"../results/{'_'.join(simulation.split('_')[:-1])}/\"\n",
+    "                     \"stellar_formation_time_dist.csv\")\n",
+    "    data[i, :] = df[\"StellarAgeDist_All_InSitu\"]\n",
+    "median = np.median(data, axis=0)\n",
+    "axs[0].plot(df[\"TimeBinCenters_Gyr\"], median, ls=(0, (5, 2)),\n",
+    "            zorder=zorder, c=\"black\", lw=1, label=\"Median\")\n",
+    "\n",
+    "for j, c in enumerate(settings.components):\n",
+    "    data = np.zeros((len(sample), N_BINS))\n",
+    "    for i, simulation in enumerate(sample):\n",
+    "        df = pd.read_csv(f\"../results/{'_'.join(simulation.split('_')[:-1])}/\"\n",
+    "                         \"stellar_formation_time_dist.csv\")\n",
+    "        data[i, :] = df[f\"StellarAgeDist_{c}_InSitu\"]\n",
+    "    median = np.median(data, axis=0)\n",
+    "    axs[j + 1].plot(df[\"TimeBinCenters_Gyr\"], median, ls=(0, (5, 2)),\n",
+    "                    zorder=zorder, c=settings.component_colors[c],\n",
+    "                    lw=1, label=\"Median\")\n",
+    "# endregion\n",
     "\n",
     "axs[0].text(\n",
     "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
