--- a/scripts/Abundance Evolution Maps.ipynb
+++ b/scripts/Abundance Evolution Maps.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,13 @@
     "from scipy.stats import binned_statistic\n",
     "import pandas as pd\n",
     "import warnings\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import LogNorm\n",
-    "import sys"
+    "import matplotlib.pyplot as plt \n",
+    "from matplotlib.colors import LogNorm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,8 +236,9 @@
     "gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
     "ax = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
-    "ax.set_xlim(data[\"TimeEdges_Gyr\"][0], 14)\n",
+    "ax.set_xlim(0, 14)\n",
     "ax.set_xlabel(\"Time [Gyr]\")\n",
+    "ax.set_xticks([0, 2, 4, 6, 8, 10, 12, 14])\n",
     "\n",
     "ax.set_ylim(-2.5, 1.5)\n",
     "ax.set_ylabel(\"[Fe/H]\")\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,8 +286,9 @@
     "gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
     "ax = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
-    "ax.set_xlim(data[\"TimeEdges_Gyr\"][0], 14)\n",
+    "ax.set_xlim(0, 14)\n",
     "ax.set_xlabel(\"Time [Gyr]\")\n",
+    "ax.set_xticks([0, 2, 4, 6, 8, 10, 12, 14])\n",
     "\n",
     "ax.set_ylim(0, 1)\n",
     "ax.set_ylabel(\"[O/Fe]\")\n",
